# cppl-homeworks

01/01/: 01.cpp  01.sln  01.vcxproj
02/01/: 01.cpp  01.sln  01.vcxproj  01.vcxproj.filters  smart_array.cpp  smart_array.h
02/02/: 02.cpp  02.sln  02.vcxproj  02.vcxproj.filters  smart_array.cpp  smart_array.h
03/01/: CMakeLists.txt
03/01/src/: list.cpp  list.h  main.cpp  test-main.cpp
03/02/src/: list.cpp  list.h  test-main.cpp
03/build_01-Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  lists-b12d07c_include.cmake  lists-b12d07c_tests.cmake
03/build_01-Debug/.cmake/api/v1/reply/: cache-v2-1a7c3ecfc11fbb8dc5e5.json  cache-v2-df4239e9b2cda763681c.json  (+15 more)
03/build_01-Debug/Testing/: TAG
03/build_01-Debug/Testing/20231102-1857/: Test.xml
03/build_01-Debug/Testing/20231103-0941/: Test.xml
03/build_01-Debug/Testing/20231105-1313/: Test.xml
03/build_01-Debug/test-build/: Makefile  cmake_install.cmake
03/build_01-Debug/test-build/src/: Makefile  cmake_install.cmake
03/build_01-Debug/tests/: Makefile  cmake_install.cmake
03/build_01-Debug/tests/src/: Makefile  cmake_install.cmake
04/01/src/: main.cpp
04/02/src/: main.cpp  table.h
04/03/src/: get_count.h  get_sum.h  main.cpp  tree.h
08/01/src/: main.cpp
08/02/src/: main.cpp
08/build_01-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
08/build_02-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
(+10 files in other folders)
